--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -27,10 +27,10 @@
 	<meta name="og:url" content="{{ .Permalink }}">
 	<meta name="og:site_name" content="{{ .Title }}">
 	<meta name="og:type" content="article">
-	<!-- Open Graph - Article -->
-	<meta name="article:author" content="{{ $.Site.Params.twitter }}">
-	<meta name="article:tag" content="{{ range .Params.tags }}{{.}} {{end}}">
-	<link rel="stylesheet" type="text/css" href="/css/style{{ $.Site.Params.style }}.css">
+  <!-- Open Graph - Article -->
+  <meta name="article:author" content="{{ $.Site.Params.twitter }}">
+  <meta name="article:tag" content="{{ range .Params.tags }}{{.}} {{end}}">
+  <link rel="stylesheet" type="text/css" href="/css/base.css">
 	<script src="/js/caption.js"></script>
 </head>
 <body>
