--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,6 +7,8 @@ body, li  p {
 
 h1,h2,h3,h4,h5,h6,header,header.a {
   font-family: 'Roboto', sans-serif;
+  line-height: 1.6;
+  margin-bottom: 0.6em;
 }
 
 header,header.a{
@@ -20,8 +22,8 @@ header,header.a{
 	}
 	body > * {
 		font-size: 100%;
-		margin-left: 7.5rem;
-		margin-right: 7.5rem;
+    margin-left: 7.5rem;
+    margin-right: 7.5rem;
 	}
 }
 @media all and (max-width:840px){
@@ -31,13 +33,13 @@ header,header.a{
 	body > * {
 		margin-left: 5.5rem;
 		margin-right: 5.5rem;
-    }
+  }
 }
 @media all and (max-width:760px){
 	body > * {
 		margin-left: 2.5rem;
 		margin-right: 2.5rem;
-    }
+  }
 }
 @media all and (max-width:580px){
 	html {
@@ -45,24 +47,24 @@ header,header.a{
 	}
 	body > * {
         margin: 0.7rem 1.5rem 0 1.5rem;
-    }
+      }
 }
 
 /* reset */
 * {
-margin: 0;
-padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-	padding: 0rem 0em 0rem 0em;
-	margin-left:auto;
-	margin-right:auto;
-	width:100%;
+  padding: 0rem 0em 0rem 0em;
+  margin-left:auto;
+  margin-right:auto;
+  width:100%;
 	max-width:1000px;
 	min-height: 100%;
 	text-rendering: optimizeLegibility;
@@ -128,10 +130,9 @@ aside em {
 	font-size: 0.7rem;
 }
 
-
 p {
-	margin-bottom: 1em;
-	line-height: 1.45;
+  margin-bottom: 1em;
+  line-height: 1.45;
 }
 
 ul,ol {
@@ -180,9 +181,6 @@ img {
 	border-radius: 25px;
 }
 
-
-
-
 a {
 	text-decoration: none;
 	color: inherit;
@@ -216,18 +214,19 @@ a:hover {
 
 
 a:after {
-    position: relative;
-    content: "\FEFF°";
-    margin-left: 0.10em;
-    font-size: 80%;
-    top: -0.30em;
-    left: -0.1em;
-    color: #d21c1c;
+  position: relative;
+  content: "\FEFF°";
+  margin-left: 0.10em;
+  font-size: 80%;
+  top: -0.30em;
+  left: -0.1em;
+  color: #d21c1c;
 }
 
 code {
   font-family: 'Source Code Pro', monospace;
-  font-size: 95%;
+  font-size:0.9em;
+  font-weight: bold;
   -moz-hyphens: none;
   -webkit-hyphens: none;
   -o-hyphens: none;
@@ -237,27 +236,29 @@ code {
 
 
 pre {
-    font-size:0.8rem;
-    background: #f5f7f9;
-    padding: 1em;
-    margin-bottom:20px;
-    vertical-align: text-bottom;
-    white-space: pre-wrap;       /* css-3 */
-    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-    white-space: -pre-wrap;      /* Opera 4-6 */
-    white-space: -o-pre-wrap;    /* Opera 7 */
-    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+  font-family: 'Source Code Pro', monospace;
+  font-size:0.8em;
+  background: #f5f7f9;
+  padding: 1em;
+  line-height: 1.8;
+  margin-bottom:20px;
+  vertical-align: text-bottom;
+  white-space: pre-wrap;       /* css-3 */
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;      /* Opera 4-6 */
+  white-space: -o-pre-wrap;    /* Opera 7 */
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 
 figcaption {
-    font-weight: 400;
-    font-style: italic;
-    font-size: 0.7em/1.52;
-    line-height: 1.3;
-    color: #666665;
-    outline: 0;
-    z-index: 300;
-    text-align: center;
+    /* font-weight: 400; */
+    /* font-style: italic; */
+    /* font-size: 0.7em/1.52; */
+    /* line-height: 1.3; */
+    /* color: #666665; */
+    /* outline: 0; */
+    /* z-index: 300; */
+    /* text-align: center; */
 }
 blockquote {
   font-style: italic;
